--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -3,6 +3,18 @@ body {
   color: #212121;
   font: normal 87.5%/1.6 "Helvetica"; }
 
+@media screen and (min-width: 36em) {
+  body {
+    background: #ccc; } }
 #container {
   width: 960px;
   margin: 0 auto; }
+
+.list {
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+
+@media screen and (min-width: 36em) {
+  #container {
+    background: purple; } }
